app/assets/stylesheets/server/servers.scss
// Place all the styles related to the Servers controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
.serverChatWrapper {
    position: fixed;
    height: 100%;
    width: 100%;

}
.serverBar {
    background-color: #202225;
    color: white;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    padding: 12px 0 0;
    width: 72px;
    display: flex;
    flex-flow: column;
    align-items: center;
}

.content {

}

.channelList {
    background-color: #2f3136;
    position: absolute;
    top: 0px;
    left: 72px;
    width: 240px;
    bottom: 0;
    display: flex;
    flex-flow: column;
    align-items: center;
    justify-content: space-between;
}

.chat {
    background: #36393f;
    position: absolute;
    top: 0;
    left: 312px;
    right: 0;
    bottom: 0;
}

.serverWithErrors {
    color: red;
}

.logoutButton {
    box-sizing: border-box;
    padding: 1px;
    text-align: center;
    color: black;
    font-weight: 700;
    background-color: red;
    width: inherit;
    position: absolute;
    bottom: 0px;
    left: 0px;
}

.logoutButton:hover {
    background-color: darkred;
    opacity: 0.8;
}

.serversList {
    // display: flex;
    // flex-flow: column;
    // align-content: center;
    // justify-content: center;
    // height: 100%;
}

.serverIndexItemBox {
    // width: 72px;
}

.serverIndexItemButton,
.serverIndexSystemButton {
    // margin-right: 8px;
    margin-bottom: 8px;
    height: 48px;
    width: 48px;
    background: #36393f;
    transition: .15s ease-out,color .15s ease-out;
    border-radius: 25px;
    text-align: center;
    position: relative;
}

.serverIndexItemButton:hover,
.serverIndexSystemButton:hover {
    cursor: pointer;
    border-radius: 15px;
    // border-left: 5px solid white;
}

.serverIndexItemButton:hover {
    background-color: var(--logo-primary);
}
.serverIndexSystemButton:hover {
    background-color: #43b581;
}

.serverIndexSystemButton:hover .addServerButtonText {
    color: white;
}

.addServerButtonText {
    position: absolute;
    left: 14px;
    bottom: 7px;
    font-weight: 150;
    font-size: 34px;
    color: #43b581;
}

.addServerButtonText:hover {
    cursor: pointer;
}

.menuSeparator {
    height: 2px;
    width: 32px;
    border-radius: 1px;
    background: #36393f;
    opacity: 0.6;
    margin-bottom: 8px;
}

.racketLogoIcon {
    color: #dcddde;
}

.serverNameHeader {
    font-size: 30px;
    font-weight: 900;
    color: white;
    text-align: center;
    margin-top: 10px;
}

.updateButton,
.deleteButton {
    width: 70%;
    position: absolute;
    right: 0;
}

.updateButton {
    background-color: var(--button-secondary);
    bottom: 80px;
}

.deleteButton {
    background: rgb(65, 65, 65);
    bottom: 30px;
    right: 40px;
}

.updateButton:hover {
    background-color: var(--button-secondary-hover);
}

.deleteButton:hover {
    background: rgb(32, 32, 32);
}

